--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ input-linux = "0"
 rodio = "0"
 
 [dependencies.tokio]
-version = "0.2"
+version = "0.3"
 
-features = ["macros", "sync", "rt-core"]
+features = ["macros", "sync", "rt"]
